rust/cedar-policy-mcp-schema-generator/tests/snapshots/integration__cli__simple_default_json_schema.snap
---
source: cedar-policy-mcp-schema-generator/tests/integration.rs
expression: stdout
---
{"MyMcpServer::test_tool::Input":{"entityTypes":{"enum_attr":{"enum":["variant1","variant2"]},"obj_attr":{"shape":{"type":"Record","attributes":{"first_attr":{"type":"EntityOrCommon","name":"String"},"second_attr":{"type":"EntityOrCommon","name":"Bool"}}}},"tagged_obj_attr":{"tags":{"type":"EntityOrCommon","name":"Long"}}},"actions":{}},"MyMcpServer":{"commonTypes":{"CommonContext":{"type":"Record","attributes":{"currentTimestamp":{"type":"EntityOrCommon","name":"datetime"},"ipaddr":{"type":"EntityOrCommon","name":"ipaddr"}}},"test_toolInput":{"type":"Record","attributes":{"array_attr":{"type":"Set","element":{"type":"EntityOrCommon","name":"String"},"required":false},"bool_attr":{"type":"EntityOrCommon","name":"Bool","required":false},"date_attr":{"type":"EntityOrCommon","name":"datetime","required":false},"dec_attr":{"type":"EntityOrCommon","name":"decimal","required":false},"dt_attr":{"type":"EntityOrCommon","name":"datetime","required":false},"dur_attr":{"type":"EntityOrCommon","name":"duration","required":false},"enum_attr":{"type":"Entity","name":"MyMcpServer::test_tool::Input::enum_attr","required":false},"float_attr":{"type":"Entity","name":"MyMcpServer::Float","required":false},"int_attr":{"type":"EntityOrCommon","name":"Long","required":false},"ipv4_attr":{"type":"EntityOrCommon","name":"ipaddr","required":false},"ipv6_attr":{"type":"EntityOrCommon","name":"ipaddr","required":false},"null_attr":{"type":"Entity","name":"MyMcpServer::Null","required":false},"num_attr":{"type":"Entity","name":"MyMcpServer::Number","required":false},"obj_attr":{"type":"Entity","name":"MyMcpServer::test_tool::Input::obj_attr","required":false},"str_attr":{"type":"EntityOrCommon","name":"String","required":false},"tagged_obj_attr":{"type":"Entity","name":"MyMcpServer::test_tool::Input::tagged_obj_attr","required":false},"union_array_attr":{"type":"Record","attributes":{"typeChoice0":{"type":"EntityOrCommon","name":"String","required":false},"typeChoice1":{"type":"EntityOrCommon","name":"Long","required":false}},"required":false},"union_attr":{"type":"Record","attributes":{"typeChoice0":{"type":"EntityOrCommon","name":"String","required":false},"typeChoice1":{"type":"Entity","name":"MyMcpServer::Null","required":false}},"required":false}}}},"entityTypes":{"Float":{},"McpServer":{},"Null":{},"Number":{},"User":{"shape":{"type":"Record","attributes":{"id":{"type":"EntityOrCommon","name":"String"},"username":{"type":"EntityOrCommon","name":"String"}}}}},"actions":{"call_tool":{"appliesTo":{"resourceTypes":[],"principalTypes":[]}},"test_tool":{"appliesTo":{"resourceTypes":["McpServer"],"principalTypes":["User"],"context":{"type":"Record","attributes":{"input":{"type":"test_toolInput"},"session":{"type":"EntityOrCommon","name":"CommonContext"}}}},"memberOf":[{"id":"call_tool"}]}}}}
