rust/cedar-policy-mcp-schema-generator/tests/snapshots/integration__cli__simple_encode_numbers_as_decimal_cedar_schema.snap
---
source: cedar-policy-mcp-schema-generator/tests/integration.rs
expression: stdout
---
namespace MyMcpServer::test_tool::Input {
  entity enum_attr enum ["variant1", "variant2"];

  entity obj_attr = {
    first_attr: String,
    second_attr: Bool
  };

  entity tagged_obj_attr tags Long;
}

namespace MyMcpServer {
  type CommonContext = {
    currentTimestamp: datetime,
    ipaddr: ipaddr
  };

  type test_toolInput = {
    array_attr?: Set<String>,
    bool_attr?: Bool,
    date_attr?: datetime,
    dec_attr?: decimal,
    dt_attr?: datetime,
    dur_attr?: duration,
    enum_attr?: MyMcpServer::test_tool::Input::enum_attr,
    float_attr?: decimal,
    int_attr?: Long,
    ipv4_attr?: ipaddr,
    ipv6_attr?: ipaddr,
    null_attr?: MyMcpServer::Null,
    num_attr?: decimal,
    obj_attr?: MyMcpServer::test_tool::Input::obj_attr,
    str_attr?: String,
    tagged_obj_attr?: MyMcpServer::test_tool::Input::tagged_obj_attr,
    union_array_attr?: {
      typeChoice0?: String,
      typeChoice1?: Long
    },
    union_attr?: {
      typeChoice0?: String,
      typeChoice1?: MyMcpServer::Null
    }
  };

  entity McpServer;

  entity Null;

  entity User = {
    id: String,
    username: String
  };

  action "call_tool";

  action "test_tool" in [Action::"call_tool"] appliesTo {
    principal: [User],
    resource: [McpServer],
    context: {
      input: test_toolInput,
      session: CommonContext
    }
  };
}
